<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.Abhishek.tasktimer.MainActivity">
    <item
        android:id="@+id/main_menu_AddTask"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/Main_menue_addTask"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="102"
        android:title="@string/Main_menue_showDuration"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menue_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="103"
        android:title="@string/main_menue_show_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menue_Generate"
        android:orderInCategory="104"
        android:title="@string/Main_menue_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>